# crewai-test-automation

./: .cursor  .gitignore  .replit  README.md  aisettings  app.py  example_test_case.txt  main.py  pyproject.toml  query_weaviate.py  replit.nix  requirements.txt  run.py  run_all.py  setup.py  setup_verify.py  test_cli.py  test_flow.py  test_search_cli.py  test_weaviate_storage.py  test_zephyr_integration.py  verify_data.py  verify_openai.py  verify_weaviate.py  verify_weaviate_schema.py
agents/: base_agent.py  nlp_parsing.py  requirement_input.py
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-conte-1738361988142.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-conte-1738362510250.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-title-CrewAI-Premium-Dashb-1738362939719.txt  Pasted--Project-Ultimate-CrewAI-Mult-1739174116429.txt  Pasted--Project-Ultimate-CrewAI-Mult-1739235381074.txt  Pasted--Project-Ultimate-CrewAI-Mult-1739498684424.txt  Pasted--want-code-for-all-these-things-Imagine-you-are-Seniormost-Coder-in-the-organization-Reasoned--1739063705722.txt  Pasted-Thought-for-a-second-CrewAI-is-an-open-source-framework-designed-specifically-for-building-and-orche-1739056776917.txt
config/: config.yaml  config_loader.py
crewai/: config.py
events/: event.py  event_manager.py
integrations/: models.py  schema_versions.py  weaviate_integration.py  weaviate_schema.py  zephyr_integration.py
repl_nix_workspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tasks/: task.py
(+38 files in other folders)
